<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_grey_700">

        <ImageView
            android:id="@+id/iv_item_name"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:transitionName="image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_item_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/username"
            android:textColor="@color/grey_100"
            android:textSize="16sp"
            android:textStyle="bold"
            android:transitionName="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/iv_item_name"
            app:layout_constraintTop_toBottomOf="@+id/iv_item_name" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/description"
            android:textColor="@color/grey_100"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_username"
            app:layout_constraintEnd_toEndOf="@+id/iv_item_name"
            app:layout_constraintStart_toEndOf="@+id/tv_item_username"
            app:layout_constraintTop_toTopOf="@+id/tv_item_username" />

        <TextView
            android:id="@+id/tv_item_published_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:text="@string/date"
            android:textColor="@color/grey_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_description"
            app:layout_constraintStart_toStartOf="@+id/tv_item_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>